--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@types/randomcolor": "^0.5.7",
     "eslint-config-upleveled": "^5.0.4",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "chalk": "^5.3.0",
+    "random-hex-color-generator": "^1.0.12",
+    "randomcolor": "^0.6.2"
   }
 }
